--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "multer-s3": "^2.9.0",
     "react-autosuggest": "^10.0.2",
     "react-bootstrap": "^1.3.0",
+    "react": "latest",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.7.9",
     "react-helmet": "^6.1.0",
