--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "mongoose-fuzzy-searching": "^1.3.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "react": "latest",
+    "react": "^17.0.2",
     "react-autosuggest": "^10.0.2",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-elastic-carousel": "^0.7.9",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-interpolate-component": "^0.12.0",
     "react-rainbow": "^0.1.2",
