--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.2",
+    "browserslist": "^4.14.4",
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
@@ -50,14 +52,11 @@
     "mongoose-fuzzy-searching": "^1.3.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "openssl": "^1.1.0",
-    "react": "^17.0.2",
+    "react": "latest",
     "react-autosuggest": "^10.0.2",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.7.9",
-    "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-interpolate-component": "^0.12.0",
     "react-rainbow": "^0.1.2",
