--- a/src/package.json
+++ b/src/package.json
@@ -72,6 +72,8 @@
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "react-google-login": "latest",
+    "react-facebook-login": "latest"
   }
 }
