--- a/src/package.json
+++ b/src/package.json
@@ -57,8 +57,8 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.14.0",
     "react-elastic-carousel": "^0.7.9",
-    "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2",
+    "react-facebook-login": "latest",
+    "react-google-login": "latest",
     "react-helmet": "^6.1.0",
     "react-interpolate-component": "^0.12.0",
     "react-rainbow": "^0.1.2",
@@ -72,8 +72,6 @@
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1",
-    "react-google-login": "latest",
-    "react-facebook-login": "latest"
+    "styled-components": "^5.1.1"
   }
 }
