--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "it-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "## :computer: E-portfolio system! :student:",
   "main": "server.js",
   "scripts": {
     "client": "npm start --prefix client",
@@ -43,6 +43,7 @@
     "counterpart": "^0.18.6",
     "dotenv": "^8.2.0",
     "ejs": "*",
+    "emailjs": "^3.4.0",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -51,6 +52,8 @@
     "mongoose-fuzzy-searching": "^1.3.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "nodemailer": "^6.6.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "openssl": "^1.1.0",
     "react": "^17.0.2",
     "react-autosuggest": "^10.0.2",
@@ -72,6 +75,9 @@
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sendmail": "^1.6.1",
     "styled-components": "^5.1.1"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
