--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
+    "copy-to-clipboard": "^3.3.1",
     "cors": "^2.8.5",
     "counterpart": "^0.18.6",
     "dotenv": "^8.2.0",
