deployment debug: fix front error

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "https://github.com/UG-SaltyFish/Team-SaltyFish"
   },
-  "homepage": "https://github.com/UG-SaltyFish/Team-SaltyFish#readme",
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
