--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.6.0",
-    "react": "latest",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "styled-components": "^4.3.2"
+    "react-scripts": "^3.4.4",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
